--- a/client/src/scss/module/_mixins.scss
+++ b/client/src/scss/module/_mixins.scss
@@ -1,6 +1,6 @@
 @mixin form-step-column-gap {
     flex-direction: column;
-    gap: 20px;
+    gap: 15px;
 
     @media only screen and (max-width: 991.98px) {
       gap: unset;
