--- a/client/src/scss/module/_normalize.scss
+++ b/client/src/scss/module/_normalize.scss
@@ -76,7 +76,7 @@ h3 {
 
     &__error {
         text-align: right;
-        color: $primary-color;
+        color: $error-color;
         font-weight: $font-weight-bold;
         font-size: $font-size-medium;
         height: 15px;
