--- a/client/src/scss/module/_variables.scss
+++ b/client/src/scss/module/_variables.scss
@@ -6,6 +6,7 @@ $primary-color: #32B966;
 $text-color: #263238;
 
 $primary-color-hover: #297747;
+$error-color: #DC3545;
 
 $font-size-heading-1: 34px;
 $font-size-extra-large: 24px;
